src/objects/Salesforce_Connect_Field_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Conversion_Type__c</fullName>
        <label>Conversion Type</label>
        <picklist>
            <picklistValues>
                <fullName>String</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Field_Name__c</fullName>
        <label>Display Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enumeration_Field_Name__c</fullName>
        <label>Enumeration Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enumeration_Metadata_Type__c</fullName>
        <label>Enumeration Metadata Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implied_Decimal_Places__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Implied Decimal Places</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesforce_Connect_Object_Mapping__c</fullName>
        <label>Salesforce Connect Object Mapping</label>
        <referenceTo>Salesforce_Connect_Object_Mapping__mdt</referenceTo>
        <relationshipLabel>Salesforce Connect Field Mappings</relationshipLabel>
        <relationshipName>Salesforce_Connect_Field_Mappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Salesforce Connect Field Mapping</label>
    <pluralLabel>Salesforce Connect Field Mappings</pluralLabel>
</CustomObject>